[gd_scene load_steps=82 format=2]

[ext_resource path="res://Assets/Blacksmith/Taunt/spr_Taunt_strip.png" type="Texture" id=1]
[ext_resource path="res://Assets/Blacksmith/Idle/idle.png" type="Texture" id=2]
[ext_resource path="res://Assets/Blacksmith/Attack/spr_Attack_strip.png" type="Texture" id=3]
[ext_resource path="res://Assets/Blacksmith/Walk/walk.png" type="Texture" id=4]
[ext_resource path="res://Actors/AI/Blacksmith.gd" type="Script" id=25]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 170, 96 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 170, 0, 170, 96 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 340, 0, 170, 96 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 510, 0, 170, 96 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 680, 0, 170, 96 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 850, 0, 170, 96 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1020, 0, 170, 96 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1190, 0, 170, 96 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1360, 0, 170, 96 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1530, 0, 170, 96 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1700, 0, 170, 96 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1870, 0, 170, 96 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 2040, 0, 170, 96 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 2210, 0, 170, 96 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 2380, 0, 170, 96 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 2550, 0, 170, 96 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 170, 96 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 170, 0, 170, 96 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 340, 0, 170, 96 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 510, 0, 170, 96 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 680, 0, 170, 96 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 850, 0, 170, 96 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1020, 0, 170, 96 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1190, 0, 170, 96 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1360, 0, 170, 96 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1530, 0, 170, 96 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1700, 0, 170, 96 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1870, 0, 170, 96 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 2040, 0, 170, 96 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 2210, 0, 170, 96 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 2380, 0, 170, 96 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 2550, 0, 170, 96 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 2720, 0, 170, 96 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 2890, 0, 170, 96 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 170, 96 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 170, 0, 170, 96 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 340, 0, 170, 96 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 510, 0, 170, 96 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 680, 0, 170, 96 )

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 850, 0, 170, 96 )

[sub_resource type="AtlasTexture" id=41]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1020, 0, 170, 96 )

[sub_resource type="AtlasTexture" id=42]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1190, 0, 170, 96 )

[sub_resource type="AtlasTexture" id=43]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1360, 0, 170, 96 )

[sub_resource type="AtlasTexture" id=44]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1530, 0, 170, 96 )

[sub_resource type="AtlasTexture" id=45]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1700, 0, 170, 96 )

[sub_resource type="AtlasTexture" id=46]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1870, 0, 170, 96 )

[sub_resource type="AtlasTexture" id=47]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 2040, 0, 170, 96 )

[sub_resource type="AtlasTexture" id=48]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 2210, 0, 170, 96 )

[sub_resource type="AtlasTexture" id=49]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 2380, 0, 170, 96 )

[sub_resource type="AtlasTexture" id=50]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 2550, 0, 170, 96 )

[sub_resource type="AtlasTexture" id=51]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 2720, 0, 170, 96 )

[sub_resource type="AtlasTexture" id=52]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 2890, 0, 170, 96 )

[sub_resource type="AtlasTexture" id=53]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 3060, 0, 170, 96 )

[sub_resource type="AtlasTexture" id=54]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 3230, 0, 170, 96 )

[sub_resource type="AtlasTexture" id=55]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 3400, 0, 170, 96 )

[sub_resource type="AtlasTexture" id=56]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 3570, 0, 170, 96 )

[sub_resource type="AtlasTexture" id=57]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 3740, 0, 170, 96 )

[sub_resource type="AtlasTexture" id=58]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 3910, 0, 170, 96 )

[sub_resource type="AtlasTexture" id=59]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 4080, 0, 170, 96 )

[sub_resource type="AtlasTexture" id=60]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 4250, 0, 170, 96 )

[sub_resource type="AtlasTexture" id=61]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 4420, 0, 170, 96 )

[sub_resource type="AtlasTexture" id=62]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 4590, 0, 170, 96 )

[sub_resource type="AtlasTexture" id=63]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 4760, 0, 170, 96 )

[sub_resource type="AtlasTexture" id=64]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 4930, 0, 170, 96 )

[sub_resource type="AtlasTexture" id=65]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 170, 96 )

[sub_resource type="AtlasTexture" id=66]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 170, 0, 170, 96 )

[sub_resource type="AtlasTexture" id=67]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 340, 0, 170, 96 )

[sub_resource type="AtlasTexture" id=68]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 510, 0, 170, 96 )

[sub_resource type="AtlasTexture" id=69]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 680, 0, 170, 96 )

[sub_resource type="AtlasTexture" id=70]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 850, 0, 170, 96 )

[sub_resource type="AtlasTexture" id=71]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1020, 0, 170, 96 )

[sub_resource type="AtlasTexture" id=72]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1190, 0, 170, 96 )

[sub_resource type="SpriteFrames" id=73]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "idle",
"speed": 8.0
}, {
"frames": [ SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ) ],
"loop": false,
"name": "taunt",
"speed": 9.0
}, {
"frames": [ SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ) ],
"loop": true,
"name": "attack",
"speed": 8.0
}, {
"frames": [ SubResource( 65 ), SubResource( 66 ), SubResource( 67 ), SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ) ],
"loop": true,
"name": "walk",
"speed": 8.0
} ]

[sub_resource type="CapsuleShape2D" id=74]

[sub_resource type="Animation" id=75]
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="CircleShape2D" id=76]
radius = 163.516

[node name="Blacksmith" type="KinematicBody2D"]
script = ExtResource( 25 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 7.9129, -12.6979 )
frames = SubResource( 73 )
animation = "idle"

[node name="PlayerCover" type="CollisionShape2D" parent="."]
position = Vector2( -0.506455, -1.77054 )
shape = SubResource( 74 )

[node name="Animation" type="Node" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/wander = SubResource( 75 )

[node name="RivalArea" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="RivalArea"]
position = Vector2( -0.0815125, 0.53833 )
shape = SubResource( 76 )
__meta__ = {
"_edit_group_": true
}

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
[connection signal="body_entered" from="RivalArea" to="." method="_on_RivalArea_body_entered"]
[connection signal="body_exited" from="RivalArea" to="." method="_on_RivalArea_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
